--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 #welcome-section {
   background-color: black;
+  height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
   /* background-image: ; */
   /* color: #be3144; */
 }
@@ -9,4 +12,26 @@
 }
 .sub-heading {
   color: #be3144;
+  font-size: 24px;
+}
+
+#navbar{
+  background-color: #be3144 !important;
+  height: 80px;
+}
+
+.vertical-center {
+  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh; /* These two lines are counted as one :-)       */
+
+  display: flex;
+  align-items: center;
+}
+
+#projects {
+  padding-top: 10rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-bottom: 10rem;
+  background-color: #45567d;
 }
